# scrape_aruodas

./: .dockerignore  .gitignore  Dockerfile  LICENCE  README.md  pyproject.toml  scrapy.cfg
src/scrape_aruodas/: items.py  main.py  middlewares.py  pipelines.py  settings.py
src/scrape_aruodas/spiders/: rent.py
tests/: test_scrape_aruodas.py
tests/scrape_aruodas/spiders/: test_rent.py
