[tool.poetry]
name = "scrape_aruodas"
version = "0.1.0"
description = ""
authors = ["Julius Juodagalvis <julius.juodagalvis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.4.1"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.19.0"
jedi = "<0.18"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
